--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,24 @@
-name: chit_chat
+name: chit_chat_app
 description: A new Flutter Chat application.
 
 dependencies:
   flutter:
     sdk: flutter
-  image_picker: 0.1.1
-  google_sign_in: 0.3.1
-  firebase_analytics: 0.0.4
-  firebase_auth: 0.2.0
-  firebase_database: 0.0.12
-  firebase_storage: 0.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.0
+  cupertino_icons: ^0.1.2
+
+  path_provider: ^0.4.0
+  fluttertoast: ^2.0.7
+  image_picker: ^0.4.6
+  shared_preferences: ^0.4.2
+  cached_network_image: ^0.4.1
+  intl: ^0.15.7
+  google_sign_in: ^3.0.4
+  cloud_firestore: ^0.7.4
+  firebase_auth: ^0.5.18
+  firebase_storage: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -32,9 +37,19 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+   - images/img_not_available.jpeg
+   - images/mimi1.gif
+   - images/mimi2.gif
+   - images/mimi3.gif
+   - images/mimi4.gif
+   - images/mimi5.gif
+   - images/mimi6.gif
+   - images/mimi7.gif
+   - images/mimi8.gif
+   - images/mimi9.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
